--- a/vercel.json
+++ b/vercel.json
@@ -13,9 +13,9 @@
     }
   ],
   "env": {
-    "TELEGRAM_BOT_TOKEN": "YOUR_BOT_TOKEN",
-    "ADMIN_ID": "YOUR_ADMIN_ID",
+    "TELEGRAM_BOT_TOKEN": "6429865327:AAE-2pEt3tq24CLR7XxWMwXvlDpRxE59te8",
+    "ADMIN_ID": "5059280908",
     "SUPABASE_URL": "YOUR_SUPABASE_URL",
-    "SUPABASE_KEY": "YOUR_SUPABASE_KEY"
+    "SUPABASE_KEY": "YOUR_SUPABASE_ANON_KEY"
   }
 }
