--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     }
   ],
   "env": {
-    "TELEGRAM_BOT_TOKEN": "6429865327:AAE-2pEt3tq24CLR7XxWMwXvlDpRxE59te8",
+    "TELEGRAM_BOT_TOKEN": "YOUR_TELEGRAM_BOT_TOKEN",
     "ADMIN_ID": "5059280908",
     "SUPABASE_URL": "YOUR_SUPABASE_URL",
     "SUPABASE_KEY": "YOUR_SUPABASE_ANON_KEY"
